# personal-context-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  profile.example.json  pyproject.toml
docs/plans/: 2026-03-02-personal-context-cli-acceptance.md  2026-03-02-personal-context-cli-design.md  2026-03-02-personal-context-cli-implementation.md
skills/personal-context-ask-flow/: SKILL.md
skills/personal-context-ask-flow/agents/: openai.yaml
skills/personal-context-ask-flow/references/: command-recipes.md
skills/personal-context-cli-workflow/: SKILL.md
skills/personal-context-cli-workflow/agents/: openai.yaml
skills/personal-context-cli-workflow/references/: command-recipes.md
skills/personal-context-cli-workflow/scripts/: pctx.sh
skills/personal-context-init-profile/: SKILL.md
skills/personal-context-init-profile/agents/: openai.yaml
skills/personal-context-init-profile/references/: command-recipes.md
skills/personal-context-reinit/: SKILL.md
src/personal_context_cli/: __init__.py  cli.py  config.py  context_selector.py  crypto.py  llm_adapter.py  models.py  services.py  store.py
tests/: test_ask_command.py  test_cli_ask_follow_up.py  test_cli_ask_interface.py  test_cli_password_resolution.py  test_cli_smoke.py  test_context_preview_command.py  test_context_selector.py  test_crypto.py  test_gitignore_safety.py  test_init_and_password.py  test_models.py  test_packaging_and_skill_docs.py  test_profile_family_commands.py  test_skill_wrapper.py  test_split_skills_wrapper.py  test_store.py
(+2 files in other folders)
