[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-context-cli"
version = "0.1.0"
description = "Local-first personal context CLI."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42,<44",
  "httpx>=0.27,<1",
  "pydantic>=2,<3",
]

[project.scripts]
personal-context = "personal_context_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
